# AoC_2024

./: pyproject.toml
src/Day01/: day01.py
src/Day02/: day02.py
src/Day03/: day03.py
src/Day04-CeresSearch/: day04.py
src/Day05-PrintQueue/: day05.py
src/Day06-GuardGallivant/: day06.py
src/Day10/: day10.py
src/Day11/: day11.py
src/Day12-GardenGroups/: day12.py
src/Day14-RestroomRedoubt/: day14.py
src/Day16-ReindeerMaze/: day16.py
src/day07-BridgeRepair/: day07.py
src/day08/: day08.py
